--- a/packages/scrapper/package.json
+++ b/packages/scrapper/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20230419.0",
+    "@types/slug": "^5.0.3",
     "@typescript-eslint/eslint-plugin": "^5.59.5",
     "@typescript-eslint/parser": "^5.59.5",
     "eslint": "^8.40.0",
@@ -21,6 +22,7 @@
     "format": "prettier --loglevel silent --write src/**/*.ts"
   },
   "dependencies": {
-    "cheerio": "^1.0.0-rc.12"
+    "cheerio": "^1.0.0-rc.12",
+    "slug": "^8.2.2"
   }
 }
