--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "cf-workers-pokemon-scrapper-api",
   "version": "1.0.0",
-  "description": "Using Cloudflare Workers and KV to scrape pokemon data and server them on an endpoint",
+  "description": "Using Cloudflare Workers and KV to scrape pokemon data and serve them on an endpoint.",
   "main": "index.js",
   "private": true,
   "workspaces": [
